--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,20 @@
   padding: 0;
   box-sizing: border-box;
 }
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
 .container {
   width: 80%;
   max-width: 1200px;
-  background-color: red;
+
   margin: 30px auto;
+}
+.space {
+  margin-bottom: 20px;
 }
 .top-bar {
   height: 100px;
@@ -20,4 +28,28 @@
 .main-top {
   height: 300px;
   background-color: yellow;
+}
+.main-middle {
+  height: 60px;
+  background-color: green;
+}
+.side {
+  background-color: aqua;
+  float: left;
+  height: 200px;
+  width: 25%;
+  margin-top: 8px;
+}
+.center {
+  background-color: black;
+  float: left;
+  height: 200px;
+  width: 48%;
+  margin: 8px;
+}
+
+.footer {
+  height: 30px;
+  background-color: blue;
+  margin-top: -10px;
 }
